[project]
name = "comfyui_imageresize"
description = "A set of nodes for ComfyUI it generate image like Adobe Photoshop's Layer Style. the Drop Shadow is first completed node, and follow-up work is in progress."
version = "1.0.0"
license = {text = "MIT License"}
dependencies = ["numpy", "pillow", "torch", "matplotlib", "Scipy", "scikit_image", "scikit_learn", "opencv-contrib-python", "pymatting", "timm", "colour-science",  "transformers",  "blend_modes",  "huggingface_hub", "loguru"]

[project.urls]
Repository = "https://github.com/gayratv/ComfyUI_ImageResize"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gayratv"
DisplayName = "ComfyUI_ImageResize"
Icon = ""
